--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 ; default_envs = travis_esp8266, travis_esp32
 
 # Release binaries
-default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth
+; default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth
 
 # Build everything
 ; default_envs = esp32dev, esp8285_4CH_MagicHome, esp8285_4CH_H801, codm-controller-0.6-rev2, codm-controller-0.6, esp32s2_saola, d1_mini_5CH_Shojo_PCB, d1_mini, sp501e, travis_esp8266, travis_esp32, nodemcuv2, esp32_eth, anavi_miracle_controller, esp07, esp01_1m_full, m5atom, h803wf, d1_mini_ota, heltec_wifi_kit_8, esp8285_5CH_H801, d1_mini_debug, wemos_shield_esp32, elekstube_ips
@@ -23,10 +23,10 @@ default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth
 ; default_envs = esp8266_2m
 ; default_envs = esp01_1m_full
 ; default_envs = esp07
-; default_envs = d1_mini
+;default_envs = d1_mini
 ; default_envs = heltec_wifi_kit_8
 ; default_envs = h803wf
-; default_envs = d1_mini_debug
+default_envs = d1_mini_debug
 ; default_envs = d1_mini_ota
 ; default_envs = esp32dev
 ; default_envs = esp8285_4CH_MagicHome
@@ -113,6 +113,10 @@ build_flags =
   -D DECODE_SAMSUNG=true
   -D DECODE_LG=true
   -DWLED_USE_MY_CONFIG
+  -D USERMOD_AUTO_SAVE
+  -D USERMOD_DALLASTEMPERATURE
+  -D USERMOD_DALLASTEMPERATURE_CELSIUS
+  -D TEMPERATURE_PIN=14
   ; -D USERMOD_SENSORSTOMQTT
 
 build_unflags =
@@ -147,9 +151,10 @@ framework = arduino
 board_build.flash_mode = dout
 monitor_speed = 115200
 # slow upload speed (comment this out with a ';' when building for development use)
-upload_speed = 115200
+; upload_speed = 115200
 # fast upload speed (remove ';' when building for development use)
-; upload_speed = 921600
+upload_speed = 921600
+upload_port=COM17
 
 # ------------------------------------------------------------------------------
 # LIBRARIES: required dependencies
@@ -169,8 +174,8 @@ lib_deps =
   #For use SSD1306 OLED display uncomment following
     #U8g2@~2.27.2
   #For Dallas sensor uncomment following 2 lines
-    #OneWire@~2.3.5
-    #milesburton/DallasTemperature@^3.9.0
+    OneWire@~2.3.5
+    milesburton/DallasTemperature@^3.9.0
   #For BME280 sensor uncomment following
     #BME280@~3.0.0
     ; adafruit/Adafruit BMP280 Library @ 2.1.0
