remove auto-save

--- a/platformio.ini
+++ b/platformio.ini
@@ -113,7 +113,7 @@ build_flags =
   -D DECODE_SAMSUNG=true
   -D DECODE_LG=true
   -DWLED_USE_MY_CONFIG
-  -D USERMOD_AUTO_SAVE
+  ; -D USERMOD_AUTO_SAVE
   -D USERMOD_DALLASTEMPERATURE
   -D USERMOD_DALLASTEMPERATURE_CELSIUS
   -D TEMPERATURE_PIN=14
@@ -154,7 +154,7 @@ monitor_speed = 115200
 ; upload_speed = 115200
 # fast upload speed (remove ';' when building for development use)
 upload_speed = 921600
-upload_port=COM17
+;upload_port=COM5
 
 # ------------------------------------------------------------------------------
 # LIBRARIES: required dependencies
